1999-05-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe.m (mframe_next_arg): Handle negative offsets (as stack
	offsets).

	* config/hppa/mframe-hpux10.h (MFRAME_ARG_ENCODING): Rewrite.
	Allow negative offsets.  Use existing offsets, stripping register
	designation for floats and doubles.  Handle weird relocation of
	registers not designated for stack, but that underflow the top
	of the region between arg_ptr and argFrame.

	* config/hppa/{mframe,compiler-info}-hpux10.h replace *generic.h.

1999-05-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/sparc/mframe-solaris2.h (MFRAME_ARG_ENCODING): Disable
	check for sizes less and alignment of original.  Disable use
	of GET_SPARC_ARG_LOCATION, trusting the `+' and offset encoding.

	* config/mips/mframe-irix6.h: Add stack offset counter to mips_args.
	(MFRAME_INIT_ARGS): Initialize it to 96 (determined empirically).
	(MFRAME_ARG_ENCODING): Handle stack items. 

1999-05-08  Marcus Daniel  <marcusd@asl.krasnow.gmu.edu>

	* config/mips/mframe-irix6.h (MFRAME_INIT_ARGS, MFRAME_ARG_ENCODING): 
	Add separate counters for floating point and non-floating point
	registers.

1999-05-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/mips/mframe-irix6.h (refstructp): New inline.
	(mframe_get_struct_addr_ptr, MFRAME_ARG_ENCODING): Use it.
	(MFRAME_INIT_ARGS): Start CUM at 20.
	(MFRAME_ARG_ENCODING): Use offset of 4 when large struct reference,
	and CUM otherwise.  In latter case, add size to CUM.
	Retain register tags.

1999-05-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/mips/mframe-irix6.h (MFRAME_{G,S}ET_STRUCT_ADDR): 
	Use an offset of 1 into the argframe for struct return address.
	Note that this only occurs for structures larger than 16 bytes,
	(mframe_get_struct_addr_ptr): New static inline.
	(MFRAME_GET_STRUCT_ADDR, MFRAME_SET_STRUCT_ADDR): Use it.

	* config/mips/compiler-info-irix6.h, config/mips/mframe-irix6.h:
	Renamed from *irix6.5.h.
